--- a/New folder (3)/index.html
+++ b/New folder (3)/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>hllo world</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia, incidunt?</p>
+    <img src="shirt.jfif">
 </body>
 </html>
